--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h1 class="rapperName">MC HotDog</h1>
                     <div class="text">
                         <h3 class="subtitle"></h3>
-                        <p>熱狗是在2000年左右出道的饒舌歌手，算是帶起華語Hip Hop風潮的始祖之一。他的首張創作專輯《Wake up》在2007年獲得第18界金曲獎最佳國語專輯獎，並且在後續的音樂生涯中創作出《我愛台妹》、《差不多先生》和《貧民百民百萬富翁》等代表歌曲。<br/>
+                        <p>熱狗是在2000年左右出道的饒舌歌手，算是帶起華語Hip Hop風潮的始祖之一。他的首張創作專輯《Wake up》在2007年獲得第18屆金曲獎最佳國語專輯獎，並且在後續的音樂生涯中創作出《我愛台妹》、《差不多先生》和《貧民百萬歌星》等代表歌曲。<br/>
                         熱狗的作品多以赤裸的歌詞來抒發自己對社會現象的看法，風格強烈的音樂創作也是許多人喜歡熱狗的原因!</p>
                     </div>
                 </div>
@@ -68,8 +68,8 @@
                 <div class="col-6 offset-1 info">
                     <h1 class="rapperName">MC HotDog</h1>
                     <div class="text">
-                        <h3 class="subtitle">貧民百萬富翁</h3>
-                        <p>《貧民百萬富翁》是一首具有勉勵和炫耀含意的歌，也有一點嘴別人的內容。歌詞中強調自己的出身平平、生活一般，但是他的歌一出來還是可以引起關注，呈現一種自立自強的對比感。歌曲我最喜歡的flow是「Dirty Dirty Job 到底可不可以呀，金錢的流向全部到我這裡這裡吧」，不知不覺會想多聽幾次。</p>
+                        <h3 class="subtitle">貧民百萬歌星</h3>
+                        <p>《貧民百萬歌星》是一首具有勉勵和炫耀含意的歌，也有一點嘴別人的內容。歌詞中強調自己的出身平平、生活一般，但是他的歌一出來還是可以引起關注，呈現一種自立自強的對比感。歌曲我最喜歡的flow是「Dirty Dirty Job 到底可不可以呀，金錢的流向全部到我這裡這裡吧」，不知不覺會想多聽幾次。</p>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                     <h1 class="rapperName">Soft Lipa</h1>
                     <div class="text">
                         <h3 class="subtitle"></h3>
-                        <p>蛋堡也叫軟嘴唇，台南人，從高中接觸饒舌，開始自己創作，和朋友合作寫歌。他在2009年發表了第一張個人專輯《收斂水》，後續也發行了許多個人代表作，是許多人喜愛饒舌歌手之一。蛋堡曾金多次入圍金曲獎，而在2021年則成功由《家常音樂》獲得最佳華語男歌手獎。<br/>
+                        <p>蛋堡也叫軟嘴唇，台南人，從高中接觸饒舌，開始自己創作，和朋友合作寫歌。他在2009年發表了第一張個人專輯《收斂水》，後續也發行了許多個人代表作，是許多人喜愛的饒舌歌手之一。蛋堡曾多次入圍金曲獎，而在2021年則成功由《家常音樂》獲得最佳華語男歌手獎。<br/>
                         蛋堡的歌曲常以爵士曲風詮釋，將饒舌用輕鬆舒服的音樂呈現，讓聽眾可以體會到饒舌的多種面向。</p>
                     </div>
                 </div>
@@ -364,7 +364,7 @@
                     <h1 class="rapperName">熊仔</h1>
                     <div class="text">
                         <h3 class="subtitle">&Phi; 兇宅</h3>
-                        <p>《&Phi; 兇宅》是熊仔首張專輯內的主打歌，也是讓許多人開始認識熊仔的歌曲。從歌名看自己本名的諧音就可以看出他的創作風格具有各種的細節。這首歌也是熊仔的初次自我介紹，闡述自己的背景和決心，也有和過去唱衰他的人喊話的部分，不論是前面的鋪陳或是後面的爆發都實實在在的會讓人過耳不忘熊仔的作品!</p>
+                        <p>《&Phi; 兇宅》是熊仔首張專輯內的主打歌，也是讓許多人開始認識熊仔的歌曲。從歌具有自己本名的諧音就可以看出他的創作風格包含各種的細節。這首歌也是熊仔的初次自我介紹，闡述自己的背景和決心，也有和過去唱衰他的人喊話的部分，不論是前面的鋪陳或是後面的爆發都實實在在的會讓人過耳不忘熊仔的作品!</p>
                     </div>
                 </div>
             </div>
@@ -494,7 +494,7 @@
                     <h1 class="rapperName">頑童J116</h1>
                     <div class="text">
                         <h3 class="subtitle">幹大事</h3>
-                        <p>《幹大事》是頑童的經典歌曲之一，也是維持一貫的態度在製作，歌詞描述圍繞在金錢和地位上的闡述，洗腦的hook讓這首歌很容易在討海中浮現，揮之不去。</p>
+                        <p>《幹大事》是頑童的經典歌曲之一，也是維持一貫的態度在製作，歌詞描述圍繞在金錢和地位上的闡述，洗腦的hook讓這首歌很容易在腦海中浮現，揮之不去。</p>
                     </div>
                 </div>
             </div>
@@ -512,7 +512,7 @@
                     <h1 class="rapperName">頑童MJ116</h1>
                     <div class="text">
                         <h3 class="subtitle">少年董</h3>
-                        <p>這首歌是在頑童2019年發表的專輯中，也是一首以態度出發的饒舌創作，歌詞是團員各自描述自己在成長過程中的歷練和坎歌，某種程度上蠻鼓舞人心的。</p>
+                        <p>這首歌是在頑童2019年發表的專輯中，也是一首以態度出發的饒舌創作，歌詞是團員各自描述自己在成長過程中的歷練和坎坷，某種程度上蠻鼓舞人心的。</p>
                     </div>
                 </div>
             </div>
